[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-fork"
version = "0.1.0"
description = "Database branching related mess."
authors = [{ name = "Elaine", email = "ra3448@columbia.edu" }]
requires-python = ">=3.11"
dependencies = [
    "anytree",
    "coolname",
    "faker",
    "microbench",
    "neon-api",
    "numpy",
    "psycopg2-binary",
    "python-dotenv",
    "langchain",
    "langgraph",
    "langchain-google-genai",
    "langchain-openai",
]

[tool.setuptools]
packages = ["dblib", "microbench"]

[tool.setuptools.package-data]
lib = ["*.py"]
